[REFACTOR] toList() 로 변환